--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "method-override": "^3.0.0"
+    "express-session": "^1.18.0",
+    "method-override": "^3.0.0",
+    "session": "^0.1.0"
   }
 }
