--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.2.0",
     "method-override": "^3.0.0",
     "session": "^0.1.0"
   }
