--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "method-override": "^3.0.0",
+    "nodemailer": "^6.9.14",
     "session": "^0.1.0"
   }
 }
