--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^12.2.0",
     "method-override": "^3.0.0",
     "nodemailer": "^6.9.14",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "uuid": "^10.0.0"
   }
 }
