--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
+    "http-status-codes": "^2.3.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
