--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon main.js",
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.7",
     "session": "^0.1.0",
     "uuid": "^10.0.0"
   }
